Remove min-width, fixes #7, tested on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body {
 }
 
 .App {
-    min-width: 920px;
     margin: 0 auto;
     font-family: Inter, Helvetica, arial, sans-serif;
 }
